--- a/Semana-04/css/header.css
+++ b/Semana-04/css/header.css
@@ -4,7 +4,7 @@ header {
     width: 100%;
     padding: 0 26px;
     background-color: #41426F;
-    display:  flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
@@ -12,11 +12,11 @@ header {
 h1 {
     font-size: 40px;
     font-weight: bold;
-    color: #FFFFFF;
+    color: white;
 }
 
 .fa-bars {
-    color: #FFFFFF;
+    color: white;
     font-size: 40px;
 }
 
